Add relation 'contact-infos' to contact-registration-sheet

--- a/api/contact-infos/models/contact-infos.settings.json
+++ b/api/contact-infos/models/contact-infos.settings.json
@@ -57,6 +57,10 @@
     },
     "issue": {
       "type": "string"
+    },
+    "contact_registration_sheet": {
+      "via": "contact_infos",
+      "model": "contact-registration-sheet"
     }
   }
 }
