Add Relation between contact-registration-sheet and contact-infos

--- a/api/contact-registration-sheet/models/contact-registration-sheet.settings.json
+++ b/api/contact-registration-sheet/models/contact-registration-sheet.settings.json
@@ -46,8 +46,7 @@
       "type": "string"
     },
     "contact_infos": {
-      "collection": "contact-infos",
-      "via": "contact_registration_sheet"
+      "collection": "contact-infos"
     }
   }
 }
