Remove Blood field and add Blood to samples in the Exam Control Sheets

--- a/api/exam-control-sheets/models/exam-control-sheets.settings.json
+++ b/api/exam-control-sheets/models/exam-control-sheets.settings.json
@@ -113,14 +113,12 @@
       "type": "enumeration",
       "enum": [
         "oro_pharynged",
-        "naso_pharynged"
+        "naso_pharynged",
+        "blood"
       ]
     },
     "other_sample": {
       "type": "string"
-    },
-    "blood_sample": {
-      "type": "boolean"
     },
     "sample_conservation": {
       "type": "enumeration",
